base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: app
  ports: 
    - protocol: TCP
      port: 8080
      targetPort: 8080
