base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: app-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`course-app.local`)
    kind: Rule
    services:
    - name: app-service
      port: 8080
